# DiffSBDD

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  DOCKING_ANALYSIS_COMPLETE.md  ESM_C_INTEGRATION_STRATEGY.md  EVALUATION_WORKFLOW.md  PROJECT_STRUCTURE.md  README.md  README_CLAUDE.md  THESIS_README.md  VINA_INTEGRATION_COMPLETE.md  VINA_QUICK_REFERENCE.md  VINA_WORKFLOW_GUIDE.md  analyze_all_baselines_vina.sh  analyze_results.py  analyze_results_with_vina.py  baseline_example.py  create_comparison_table.py  create_docking_ground_truth.py  create_ground_truth.py  dataset.py  debug_data.py  generate_ligands.py  lightning_modules.py  main.py  my_plan.md  prepare_dataset_analysis.py  process_crossdock.py  pyproject.toml  requirements.txt  roadmap.md  test.py  test_esmc_integration.py  train.py  verify_structure.sh  visualize_molecules.py
.claude/: ARCHITECTURE_SUMMARY.txt  BASELINE_EVALUATION_GUIDE.md  CLAUDE.md  CODE_REFERENCE.md  CONFIGURATION_GUIDE.md  ESM_C_INTEGRATION_STRATEGY.md  IN_DEPTH_EXPLANATION.md  NEXT_STEPS.md  PLAN.md  QUICK_REFERENCE.md  README.md  THESIS.md  THESIS_PLAN.md  implementation_plan.md  tuningplan.md
analysis/: README_VINA.md  molecule_builder.py  vina_docking.py  visualization.py
baseline/: README.md
configs/: crossdock_fullatom_cond.yml  crossdock_fullatom_cond_playground.yml  paths.py
equivariant_diffusion/: conditional_model.py  dynamics.py  egnn_new.py  en_diffusion.py
esmc_dev/: README.md
example/: 3rfm.pdbqt  3rfm_mol.html  3rfm_mol.sdf  3rfm_receptor.pdbqt  VINA_SETUP_SUMMARY.md  config.txt  ligand.pdbqt  (+1 more)
(+94 files in other folders)
