[project]
name = "diffsbdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.79",
    "imageio>=2.21.2",
    "openbabel-wheel>=3.1.1.22",
    "pytorch-lightning>=1.7.4",
    "rdkit>=2022.03.2",
    "scipy>=1.7.3",
    "seaborn>=0.13.2",
    "torch>=1.12.1",
    "torch-scatter>=2.1.2",
    "wandb>=0.13.1",
]
